[package]
name = "pumpkin-inventory"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-protocol = { path = "../pumpkin-protocol" }
pumpkin-data = { path = "../pumpkin-data" }

pumpkin-world = { path = "../pumpkin-world" }
pumpkin-registry = {path = "../pumpkin-registry"}
pumpkin-util = { path = "../pumpkin-util" }

log.workspace = true
rayon.workspace = true
tokio.workspace = true
thiserror.workspace = true

