[package]
name = "pumpkin-util"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
rand = "0.9"


num-traits = "0.2"

colored = "3.0"
md5 = "0.7"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
enum_dispatch = "0.3.13"

