[package]
name = "pumpkin-world"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
pumpkin-util = { path = "../pumpkin-util" }
pumpkin-config = { path = "../pumpkin-config" }
pumpkin-macros = { path = "../pumpkin-macros" }
pumpkin-data = { path = "../pumpkin-data" }

async-trait.workspace = true
futures.workspace = true

bytes.workspace = true

tokio.workspace = true
rayon.workspace = true
uuid.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

num-derive = "0.4"
sha2 = "0.10"

dashmap = "6.1"

num-traits = "0.2"

# Compression
flate2 = "1.1"
lz4-java-wrc = "0.2.0"
zstd = "0.13.3"

itertools = "0.14.0"
file-guard = "0.2"
indexmap = "2.9"
enum_dispatch = "0.3"
derive-getters = "0.5.0"

thread_local = "1.1.8"
lru = "0.13.0"

tokio-util = { version = "0.7.15", features = ["rt"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
temp-dir = "0.1.14"
# Print log info inside tests when needed
env_logger = "0.11.8"
# Allows us to modify the config
pumpkin-config = { path = "../pumpkin-config", features = ["test_helper"] }
# Deserialize NaN and Inf
serde_json5 = "0.2.1"

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "chunk_io"
harness = false
